Doc/force-app/main/default/objects/Subscription__c/Subscription__c.object-meta.xml
<CustomObject>
    <label>Product Customer</label>
    <nameField>
        <displayFormat>S-{0000000}</displayFormat>
        <label>Product Customer Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Customers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>