Doc/force-app/main/default/objects/Subscription__c/fields/Budget_Holder_Audited__c.field-meta.xml
<CustomField>
    <fullName>Budget_Holder_Audited__c</fullName>
    <formula>IF(
  Budget_Holder_Contacts_Audited__c &gt; 0,
  TRUE,
  FALSE
)</formula>
    <label>Budget Holder Audited?</label>
    <type>Checkbox</type>
</CustomField>