Doc/force-app/main/default/objects/Subscription__c/fields/Customer_Lifecycle_Stage_I__c.field-meta.xml
<CustomField>
    <fullName>Customer_Lifecycle_Stage_I__c</fullName>
    <label>Customer Lifecycle Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Customer</fullName>
            </value>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Adoption</fullName>
            </value>
            <value>
                <fullName>Seasoned Customer</fullName>
            </value>
            <value>
                <fullName>Lapsed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>