Doc/force-app/main/default/objects/Subscription__c/fields/Earliest_Term_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Earliest_Term_Start_Date__c</fullName>
    <label>Earliest Term Start Date</label>
    <type>Date</type>
</CustomField>