Doc/force-app/main/default/objects/Subscription__c/fields/Earliest_Term_Start_Date_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Earliest_Term_Start_Date_Quarter__c</fullName>
    <formula>IF(MONTH(Earliest_Term_Start_Date__c)&lt;=3, 3,
IF(MONTH(Earliest_Term_Start_Date__c)&lt;=6, 4, 
IF(MONTH(Earliest_Term_Start_Date__c)&lt;=9, 1, 
IF(MONTH(Earliest_Term_Start_Date__c)&lt;=12, 2,
0
))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Earliest Term Start Date Quarter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>