Doc/force-app/main/default/objects/Subscription__c/fields/FMS_Discussion_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>FMS_Discussion_Completed_Date__c</fullName>
    <label>FMS Discussion Completed Date</label>
    <type>DateTime</type>
</CustomField>