Doc/force-app/main/default/objects/Subscription__c/fields/Health_Rating__c.field-meta.xml
<CustomField>
    <fullName>Health_Rating__c</fullName>
    <description>This field is used for reporting purposes for the board only. It is used to consolidate the CSM Health rating field into more manageable categories.</description>
    <label>Health Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A - Good</fullName>
                <color>#009900</color>
                <label>A - Good</label>
            </value>
            <value>
                <fullName>B - Minor Concerns / C - Needs Attention</fullName>
                <color>#78C953</color>
                <label>B - Minor Concerns / C - Needs Attention</label>
            </value>
            <value>
                <fullName>D - At Risk</fullName>
                <color>#FF0000</color>
                <label>D - At Risk</label>
            </value>
            <value>
                <fullName>E - No Knowledge</fullName>
                <color>#999999</color>
                <label>E - No Knowledge</label>
            </value>
            <value>
                <fullName>F - Lapsed</fullName>
                <color>#990000</color>
                <label>F - Lapsed</label>
            </value>
            <value>
                <fullName>New Subscription</fullName>
                <color>#0B24BE</color>
                <label>New Subscription</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>