Doc/force-app/main/default/objects/Subscription__c/fields/IT_Administrator_Contacts__c.field-meta.xml
<CustomField>
    <fullName>IT_Administrator_Contacts__c</fullName>
    <label>IT Administrator Contacts</label>
    <summaryFilterItems>
        <field>Subscription_Contact__c.Role__c</field>
        <operation>equals</operation>
        <value>IT Administrator</value>
    </summaryFilterItems>
    <summaryForeignKey>Subscription_Contact__c.Subscription__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>