Doc/force-app/main/default/objects/Subscription__c/fields/IT_Owner_Audited__c.field-meta.xml
<CustomField>
    <fullName>IT_Owner_Audited__c</fullName>
    <formula>IF(
  IT_Owner_Contacts_Audited__c &gt; 0,
  TRUE,
  FALSE
)</formula>
    <label>IT Owner Audited?</label>
    <type>Checkbox</type>
</CustomField>