Doc/force-app/main/default/objects/Subscription__c/fields/Old_Subscription_Numbers__c.field-meta.xml
<CustomField>
    <fullName>Old_Subscription_Numbers__c</fullName>
    <label>Old Subscription Numbers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>