Doc/force-app/main/default/objects/Subscription__c/fields/Org_Status__c.field-meta.xml
<CustomField>
    <fullName>Org_Status__c</fullName>
    <description>OnePlace Legacy Instance Org Status</description>
    <inlineHelpText>OnePlace Legacy Instance Org Status</inlineHelpText>
    <label>Org Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Pending Migration</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Cancellation Requested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>