Doc/force-app/main/default/objects/Subscription__c/fields/Product_Line_New_Text__c.field-meta.xml
<CustomField>
    <fullName>Product_Line_New_Text__c</fullName>
    <formula>Product_LineNew__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Line Text</label>
    <type>Text</type>
</CustomField>