Doc/force-app/main/default/objects/Subscription__c/fields/Product_Ownership_Detail__c.field-meta.xml
<CustomField>
    <fullName>Product_Ownership_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to link PC to POD. Will be entered manually by Tim Parsons</description>
    <label>Product Ownership Detail</label>
    <referenceTo>Product_Ownership_Detail__c</referenceTo>
    <relationshipLabel>Product Customers</relationshipLabel>
    <relationshipName>Product_Customers</relationshipName>
    <type>Lookup</type>
</CustomField>