Doc/force-app/main/default/objects/Subscription__c/fields/SRT_DeliverIfNoAlerts__c.field-meta.xml
<CustomField>
    <fullName>SRT_DeliverIfNoAlerts__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Should we send an SRT email even if there are no alerts?</inlineHelpText>
    <label>Deliver if no alerts</label>
    <type>Checkbox</type>
</CustomField>