Doc/force-app/main/default/objects/Subscription__c/fields/SRT_Email_Frequency__c.field-meta.xml
<CustomField>
    <fullName>SRT_Email_Frequency__c</fullName>
    <inlineHelpText>Determines how often the customer receives the SRT Client Health Email. Weekly emails are sent on Monday</inlineHelpText>
    <label>SRT - Email Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
                <default>true</default>
                <label>Daily</label>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>