Doc/force-app/main/default/objects/Subscription__c/fields/SRT_Last_Check_In__c.field-meta.xml
<CustomField>
    <fullName>SRT_Last_Check_In__c</fullName>
    <label>SRT - Last Check In</label>
    <type>Date</type>
</CustomField>