Doc/force-app/main/default/objects/Subscription__c/fields/SRT_Send_Email__c.field-meta.xml
<CustomField>
    <fullName>SRT_Send_Email__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Uncheck this if the customer does not wish to receive the SRT client emails</description>
    <inlineHelpText>Uncheck this if the customer does not wish to receive the SRT client emails</inlineHelpText>
    <label>SRT - Send Email</label>
    <type>Checkbox</type>
</CustomField>