Doc/force-app/main/default/objects/Subscription__c/fields/SRT_UseBritishDateFormat__c.field-meta.xml
<CustomField>
    <fullName>SRT_UseBritishDateFormat__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this checkbox to send with British date formats (yyyy-mm-dd) instead of mm-dd-yyyy format</inlineHelpText>
    <label>Use British Date Format</label>
    <type>Checkbox</type>
</CustomField>