Doc/force-app/main/default/objects/Subscription__c/fields/X4_Contacts_Audited__c.field-meta.xml
<CustomField>
    <fullName>X4_Contacts_Audited__c</fullName>
    <formula>IF(
  Roles_Audited__c &gt; 3,
  TRUE,
  FALSE
)</formula>
    <label>4 Contacts Audited?</label>
    <type>Checkbox</type>
</CustomField>