Doc/force-app/main/default/objects/Subscription__c/listViews/All_Experience_Product_Customer.listView-meta.xml
<ListView>
    <fullName>All_Experience_Product_Customer</fullName>
    <columns>Subscription_Name__c</columns>
    <columns>CSM_Health_Rating__c</columns>
    <columns>Amount__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Customer_Lifecycle_Stage__c</columns>
    <columns>Account_Owner__c</columns>
    <columns>CSM__c</columns>
    <columns>CSM_Health_Rating_Last_Modified__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_LineNew__c</field>
        <operation>contains</operation>
        <value>Experience</value>
    </filters>
    <filters>
        <field>CSM_Health_Rating__c</field>
        <operation>notEqual</operation>
        <value>Black</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Active Experience Product Customers</label>
    <language>en_US</language>
    <sharedTo>
        <group>Customer_Experience_Group</group>
    </sharedTo>
</ListView>