Doc/force-app/main/default/objects/Subscription__c/listViews/APAC_TB_Subs.listView-meta.xml
<ListView>
    <fullName>APAC_TB_Subs</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>At_Risk_Flag__c</columns>
    <columns>CSM_Health_Rating__c</columns>
    <columns>Health_Rating__c</columns>
    <columns>Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Geography__c</field>
        <operation>equals</operation>
        <value>APAC</value>
    </filters>
    <filters>
        <field>Product_Line__c</field>
        <operation>equals</operation>
        <value>Time Builder,DTE Axiom</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>APAC TB Subs</label>
    <sharedTo></sharedTo>
</ListView>